[project]
name = "pyiotb"
version = "0.1.3"
description = "A library for interfacing to Tartabit IoT Bridge"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Tartabit, LLC", email = "support@tartabit.com"}
]
dependencies = [
    "requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
urls = { "Homepage" = "https://github.com/tartabit/iotb-py" }

[project.scripts]
trigger-comparison = "pyiotb.scripts.trigger_comparison:main"
download-logs = "pyiotb.scripts.download_logs:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"